# flask-app

./: .gitignore  .requirements.txt.swp  Cleaned_Emails.xlsx  Flask_Scraper_Backend.py  Procfile  autosave_20250912_121300.csv  autosave_20250912_122139.csv  autosave_20250912_124344.csv  fb_storage_state.json  fbf.py  gmaps_full_scraped.csv  google-chrome-stable_current_amd64.deb  graph.py  live.py  locations.csv  mailphone.py  merging1.py  pyproject.toml  render.yaml  requirements.txt  requirements.txt.save  requirements_backup.txt  scraped_20250908_171701.csv  scraper_checkpoint.json  scraper_checkpoint.pkl  sequential_restaurants_20250911_172609.csv  sequential_restaurants_20250911_172627.csv  sequential_restaurants_20250911_172645.csv  sequential_restaurants_20250911_172702.csv  sequential_restaurants_20250911_172718.csv  sequential_restaurants_20250911_172735.csv  sequential_restaurants_20250911_172751.csv  sequential_restaurants_20250911_172809.csv  sequential_restaurants_20250911_172825.csv  sequential_restaurants_20250911_172843.csv  sequential_restaurants_20250911_172859.csv  sequential_restaurants_20250911_172916.csv  sequential_restaurants_20250911_172931.csv  sequential_restaurants_20250911_172947.csv  sequential_restaurants_20250911_173003.csv  (+5 more)
scraper_data/: progress_20250912_182051_116.json  progress_20250912_182053_116.json  progress_20250912_183830_116.json  progress_20250912_183833_116.json  progress_20250915_103934_89.json  progress_20250915_104030_202.json  progress_20250915_104033_202.json  progress_20250915_104102_260.json  (+27 more)
static/: script.js  (+1 more)
(+7 files in other folders)
