[project]
name = "flask-app"
version = "0.1.0"
description = "dark_web_scraper"
authors = [
    {name = "bhargav_vamsi"}
]
license = {text = "yes"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "flask (>=2.3.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
